--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode=development --open --hot",
-    "build": "webpack --mode=production --watch"
+    "watch": "webpack --mode=production --watch",
+    "start": "webpack-dev-server --mode=development --open --hot"
   },
   "author": "",
   "license": "ISC",
